--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,7 +185,7 @@ input, select, textarea {
 		font-weight: 900;
 		line-height: 1.5;
 		letter-spacing: 0.075em;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		margin: 0 0 1rem 0;
 	}
 
@@ -385,6 +385,8 @@ input, select, textarea {
 
 		.row > .col-3 {
 			width: 25%;
+			margin: auto;
+			padding-bottom: 0;
 		}
 
 		.row > .off-3 {
@@ -504,10 +506,11 @@ input, select, textarea {
 
 			.row.gtr-50 > * {
 				padding: 0 0 0 0.75rem;
+				vertical-align: middle;
 			}
 
 			.row.gtr-50.gtr-uniform {
-				margin-top: -0.75rem;
+				vertical-align: middle;
 			}
 
 				.row.gtr-50.gtr-uniform > * {
@@ -2082,12 +2085,12 @@ input, select, textarea {
 		font-size: 0.8rem;
 		font-weight: 900;
 		letter-spacing: 0.075em;
-		height: 3rem;
 		line-height: 3rem;
 		padding: 0 2rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		margin: 0.3rem;
+		/*text-transform: uppercase;*/
 		white-space: nowrap;
 	}
 
@@ -2318,7 +2321,7 @@ input, select, textarea {
 		line-height: 1.5;
 		letter-spacing: 0.075em;
 		font-size: 0.8rem;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		margin: 0 0 0.75rem 0;
 	}
 
@@ -2630,6 +2633,8 @@ input, select, textarea {
 
 			.image.fit img {
 				width: 100%;
+				vertical-align: middle;
+				height: 50%;
 			}
 
 		.image.main {
@@ -3030,7 +3035,7 @@ input, select, textarea {
 			line-height: 1.5;
 			padding: 0 0.75rem 0.75rem 0.75rem;
 			text-align: left;
-			text-transform: uppercase;
+			/*text-transform: uppercase;*/
 		}
 
 			@media screen and (max-width: 980px) {
@@ -3134,7 +3139,7 @@ input, select, textarea {
 			position: relative;
 			text-align: center;
 			text-decoration: none;
-			text-transform: uppercase;
+			/*text-transform: uppercase;*/
 		}
 
 		.pagination .next, .pagination .previous {
@@ -3234,7 +3239,7 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg2.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
@@ -3572,7 +3577,7 @@ input, select, textarea {
 			letter-spacing: 0.075em;
 			line-height: 1;
 			padding: 1rem 1.75rem;
-			text-transform: uppercase;
+			/*text-transform: uppercase;*/
 			visibility: visible;
 		}
 
@@ -3679,6 +3684,7 @@ input, select, textarea {
 		}
 
 		#nav ul.links {
+			height: 500;
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -3697,7 +3703,7 @@ input, select, textarea {
 			list-style: none;
 			margin-bottom: 0;
 			padding-left: 0;
-			text-transform: uppercase;
+			/*text-transform: uppercase;*/
 		}
 
 			#nav ul.links li {
@@ -3714,6 +3720,7 @@ input, select, textarea {
 					font-size: 0.8rem;
 					outline: none;
 					padding: 0 2rem;
+					font-size: large;
 				}
 
 					#nav ul.links li a:hover {
@@ -3727,6 +3734,7 @@ input, select, textarea {
 
 					#nav ul.links li.active a {
 						color: #1e252d;
+						font-size: xx-large;
 					}
 
 						#nav ul.links li.active a:hover {
@@ -3780,6 +3788,7 @@ input, select, textarea {
 
 		#main > .post {
 			padding: 8rem 8rem 6rem 8rem ;
+			background-color: #fffccc;
 		}
 
 			#main > .post header.major > .date {
@@ -3953,7 +3962,7 @@ input, select, textarea {
 		display: -webkit-flex;
 		display: -ms-flex;
 		display: flex;
-		background-color: #f5f5f5;
+		background-color: #edeabb;
 		color: #909498;
 		cursor: default;
 		position: relative;
@@ -4393,7 +4402,7 @@ input, select, textarea {
 		letter-spacing: 0.075em;
 		line-height: 1.5;
 		text-align: center;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		margin: 4rem auto 8rem auto;
 		width: calc(100% - 4rem);
 		max-width: 72rem;
@@ -4502,7 +4511,7 @@ input, select, textarea {
 		font-weight: 900;
 		letter-spacing: 0.075em;
 		padding: 0.375rem 1.25rem;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		z-index: 10001;
 	}
 
@@ -4595,7 +4604,7 @@ input, select, textarea {
 					font-weight: 900;
 					letter-spacing: 0.075em;
 					padding: 0.75rem 0;
-					text-transform: uppercase;
+					/*text-transform: uppercase;*/
 				}
 
 				#navPanel .links li:first-child {
