--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
+@import url("https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@700&display=swap");
 
 /*
 	Massively by HTML5 UP
@@ -181,7 +182,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "Source Sans Pro", Helvetica, sans-serif;
+		font-family: 'Mountains of Christmas', cursive;
 		font-weight: 900;
 		line-height: 1.5;
 		letter-spacing: 0.075em;
@@ -3240,7 +3241,7 @@ input, select, textarea {
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg2.jpg");
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg-forest.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
@@ -3252,6 +3253,7 @@ input, select, textarea {
 				position: fixed;
 				width: 100vw;
 				height: 100vh;
+				background-size: cover;
 			}
 
 		#wrapper.fade-in:before {
@@ -3437,6 +3439,7 @@ input, select, textarea {
 				transform: translateY(0);
 				opacity: 1;
 				visibility: visible;
+				font-family: 'Mountains of Christmas', cursive;
 			}
 
 		body.is-preload #intro {
@@ -3580,6 +3583,7 @@ input, select, textarea {
 			padding: 1rem 1.75rem;
 			/*text-transform: uppercase;*/
 			visibility: visible;
+			font-family: 'Mountains of Christmas', cursive;
 		}
 
 			#header .logo:hover {
