--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1322,6 +1322,10 @@ input, select, textarea {
 					margin-bottom: 0;
 				}
 
+				p {
+					display: none;
+				}
+
 				.row.aln-left {
 					justify-content: flex-start;
 				}
@@ -2636,8 +2640,13 @@ input, select, textarea {
 			.image.fit img {
 				width: 100%;
 				vertical-align: middle;
-				height: 50%;
 			}
+		
+	img#img01 {
+		width: auto;
+		max-width: 80%;
+		max-height: 80%;
+	}
 
 		.image.main {
 			display: block;
@@ -4700,3 +4709,90 @@ input, select, textarea {
 		}
 
 	}
+
+#myImg {
+	cursor: pointer;
+	transition: 0.3s;
+	}
+	
+	#myImg:hover {
+	opacity: 0.7;
+	}
+	
+	.modal {
+	display: none;
+	/* Hidden by default */
+	position: fixed;
+	/* Stay in place */
+	z-index: 1;
+	/* Sit on top */
+	padding-top: 100px;
+	/* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%;
+	/* Full width */
+	height: 100%;
+	/* Full height */
+	overflow: visible;
+	/* Enable scroll if needed */
+	background-color: rgb(0, 0, 0);
+	/* Fallback color */
+	background-color: rgba(0, 0, 0, 0.9);
+	/* Black w/ opacity */
+	}
+	
+	.modal-content {
+	margin: auto;
+	display: block;
+	width: 80%;
+	}
+	
+	#caption {
+	margin: auto;
+	display: block;
+	width: 80%;
+	max-width: 700px;
+	text-align: center;
+	color: #ccc;
+	padding: 10px 0;
+	height: 150px;
+	}
+	
+	.modal-content,
+	#caption {
+	animation-name: zoom;
+	animation-duration: 0.6s;
+	}
+	
+	@keyframes zoom {
+	from {
+		transform: scale(0)
+	}
+	to {
+		transform: scale(1)
+	}
+	}
+	
+	.close {
+	position: absolute;
+	top: 15px;
+	left: 35px;
+	color: #f1f1f1;
+	font-size: 40px;
+	font-weight: bold;
+	transition: 0.3s;
+	}
+	
+	.close:hover,
+	.close:focus {
+	color: #bbb;
+	text-decoration: none;
+	cursor: pointer;
+	}
+	
+	@media only screen and (max-width: 700px) {
+	.modal-content {
+		width: 100%;
+	}
+}
