--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4775,14 +4775,14 @@ input, select, textarea {
 	}
 	
 	.close {
-	position: absolute;
-	top: 15px;
-	left: 35px;
-	color: #f1f1f1;
-	font-size: 40px;
-	font-weight: bold;
-	transition: 0.3s;
-	}
+		position: absolute;
+		top: 15px;
+		right: 35px;
+		color: #f1f1f1;
+		font-size: 40px;
+		font-weight: bold;
+		transition: 0.3s;
+	  }
 	
 	.close:hover,
 	.close:focus {
